// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button size:default, ,color:default, ,disabled:false, ,type:button,  renders correctly 1`] = `
<button
  className="Button Button--default"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`Button size:default, ,color:default, ,disabled:false, ,type:submit,  renders correctly 1`] = `
<button
  className="Button Button--default"
  disabled={false}
  onClick={[Function]}
  type="submit"
>
  Hello
</button>
`;

exports[`Button size:default, ,color:default, ,disabled:true, ,type:button,  renders correctly 1`] = `
<button
  className="Button Button--default"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`Button size:default, ,color:default, ,disabled:true, ,type:submit,  renders correctly 1`] = `
<button
  className="Button Button--default"
  disabled={true}
  onClick={[Function]}
  type="submit"
>
  Hello
</button>
`;

exports[`Button size:default, ,color:primary, ,disabled:false, ,type:button,  renders correctly 1`] = `
<button
  className="Button Button--default Button--primary"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`Button size:default, ,color:primary, ,disabled:false, ,type:submit,  renders correctly 1`] = `
<button
  className="Button Button--default Button--primary"
  disabled={false}
  onClick={[Function]}
  type="submit"
>
  Hello
</button>
`;

exports[`Button size:default, ,color:primary, ,disabled:true, ,type:button,  renders correctly 1`] = `
<button
  className="Button Button--default Button--primary"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`Button size:default, ,color:primary, ,disabled:true, ,type:submit,  renders correctly 1`] = `
<button
  className="Button Button--default Button--primary"
  disabled={true}
  onClick={[Function]}
  type="submit"
>
  Hello
</button>
`;

exports[`Button size:default, ,color:secondary, ,disabled:false, ,type:button,  renders correctly 1`] = `
<button
  className="Button Button--default Button--secondary"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`Button size:default, ,color:secondary, ,disabled:false, ,type:submit,  renders correctly 1`] = `
<button
  className="Button Button--default Button--secondary"
  disabled={false}
  onClick={[Function]}
  type="submit"
>
  Hello
</button>
`;

exports[`Button size:default, ,color:secondary, ,disabled:true, ,type:button,  renders correctly 1`] = `
<button
  className="Button Button--default Button--secondary"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`Button size:default, ,color:secondary, ,disabled:true, ,type:submit,  renders correctly 1`] = `
<button
  className="Button Button--default Button--secondary"
  disabled={true}
  onClick={[Function]}
  type="submit"
>
  Hello
</button>
`;

exports[`Button size:large, ,color:default, ,disabled:false, ,type:button,  renders correctly 1`] = `
<button
  className="Button Button--large"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`Button size:large, ,color:default, ,disabled:false, ,type:submit,  renders correctly 1`] = `
<button
  className="Button Button--large"
  disabled={false}
  onClick={[Function]}
  type="submit"
>
  Hello
</button>
`;

exports[`Button size:large, ,color:default, ,disabled:true, ,type:button,  renders correctly 1`] = `
<button
  className="Button Button--large"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`Button size:large, ,color:default, ,disabled:true, ,type:submit,  renders correctly 1`] = `
<button
  className="Button Button--large"
  disabled={true}
  onClick={[Function]}
  type="submit"
>
  Hello
</button>
`;

exports[`Button size:large, ,color:primary, ,disabled:false, ,type:button,  renders correctly 1`] = `
<button
  className="Button Button--large Button--primary"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`Button size:large, ,color:primary, ,disabled:false, ,type:submit,  renders correctly 1`] = `
<button
  className="Button Button--large Button--primary"
  disabled={false}
  onClick={[Function]}
  type="submit"
>
  Hello
</button>
`;

exports[`Button size:large, ,color:primary, ,disabled:true, ,type:button,  renders correctly 1`] = `
<button
  className="Button Button--large Button--primary"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`Button size:large, ,color:primary, ,disabled:true, ,type:submit,  renders correctly 1`] = `
<button
  className="Button Button--large Button--primary"
  disabled={true}
  onClick={[Function]}
  type="submit"
>
  Hello
</button>
`;

exports[`Button size:large, ,color:secondary, ,disabled:false, ,type:button,  renders correctly 1`] = `
<button
  className="Button Button--large Button--secondary"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`Button size:large, ,color:secondary, ,disabled:false, ,type:submit,  renders correctly 1`] = `
<button
  className="Button Button--large Button--secondary"
  disabled={false}
  onClick={[Function]}
  type="submit"
>
  Hello
</button>
`;

exports[`Button size:large, ,color:secondary, ,disabled:true, ,type:button,  renders correctly 1`] = `
<button
  className="Button Button--large Button--secondary"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`Button size:large, ,color:secondary, ,disabled:true, ,type:submit,  renders correctly 1`] = `
<button
  className="Button Button--large Button--secondary"
  disabled={true}
  onClick={[Function]}
  type="submit"
>
  Hello
</button>
`;
